Reorganising routes and fixing roles
